examples/test/testpolicy12504.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12504
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key44: value23
      key3: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value3
          key2: value49
      podSelector:
        matchLabels:
          key2: value38
          key39: value44
          key17: value2
